--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,12 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
 
     buildTypes {
         release {
@@ -53,5 +56,14 @@ dependencies {
 
     //fb
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //GsonConverter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //retrofit rxjava adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    //rxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
 }
